--- a/project2/project2.html
+++ b/project2/project2.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Visualization of IMDB and Dechdel test data</title>
+    <title>Visualization of IMDB and Bechdel test data</title>
 </head>
 <body>
+    <h1>Visualization of IMDB and Bechdel test data</h1>
     
 </body>
 </html>
