--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Projects</h1>
     <h2>Project 2</h2>
     <p>Data visualizations of <a href="http://www.imdb.com/">IMDB</a> and <a href="http://bechdeltest.com/">Bechdel test</a> data created with <a href="https://vega.github.io/vega-lite/">Vega lite</a></p>
-    <a href="project2.html"></a>
+    <a href="project2/index.html"></a>
 
 
     
