Added selection filter

--- a/project2/index.html
+++ b/project2/index.html
@@ -24,6 +24,7 @@
 <button id="avgRatingPerYear">Average Bechdel Rating per YEAR</button>
 <button id="avgRatingPerCountry">Average Bechdel Rating per COUNTRY</button>
 <button id="bechdelRatingPerYearStackedBar">Stacked Barchart Bechdel Rating per YEAR</button>
+<button id="selectionFilter">Selection filter</button>
 
   <div id="vis"></div>
 </body>
