Added script for bechdel per year 1990-2016

--- a/project2/index.html
+++ b/project2/index.html
@@ -25,6 +25,9 @@
 <button id="avgRatingPerCountry">Average Bechdel Rating per COUNTRY</button>
 <button id="bechdelRatingPerYearStackedBar">Stacked Barchart Bechdel Rating per YEAR</button>
 <button id="selectionFilter">Selection filter</button>
+<button id="imdbBechdelYear">Bechdel rating per year 1990-2016</button>
+
+
 
   <div id="vis"></div>
 </body>
