--- a/project3/arrow.html
+++ b/project3/arrow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Food Waste in Swedish Households</title>
 </head>
 <body>
     <h1>Food Waste</h1>
